# GTNCode

./: .gitignore  LICENSE  README.md  my-gtn (2).ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
app/virtusagtn/: __init__.py
app/virtusagtn/src/: GTN.py
examples/: gtn-example.ipynb  virtusagtn-walkthrough.ipynb  virtusagtn=walkthrough.ipynb
examples/gtn/: 0.pth
gtn/: Models.py  __init__.py  utils.py
resources/: info.pptx
src/: README.md
src/virtusagtn/: GTN.py  Models.py  __init__.py  utils.py
test/: testing.py
