[metadata]
version = 1.0.0
name = virtusagtn
description = slap that like button
author = Raunaq Jabbal VIRTUSA
license = Apache License 2.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    virtusagtn
install_requires =
    torch 
    torchvision
    higher 
    matplotlib 
    numpy 
    pandas 
    setuptools
    typing
    torchmetrics
python_requires = >=3.6
package_dir =
    =src
zip_safe = no